2008-09-13  Curtis Gedak  <gedakc@gmail.com>

	* configure.in: Append -svn to version for continuing development

2008-09-12  Curtis Gedak  <gedakc@gmail.com>

	* configure.in: gparted-0.3.9
	  ===================================================

	* src/GParted_Core.cc: Added pattern recognition for HP RAID drives
	  - E.g., device = /dev/cciss/c0d0, partition = /dev/cciss/c0d0p1

2008-09-04  Curtis Gedak  <gedakc@gmail.com>

	* include/Utils.h,
	  src/Utils.cc: Fixed display problem with percent complete messages.
	  - Some commands use cursor repositioning to display progress.
	    This cursoring does not display well within the tracking of
	    gparted details.  A newly added function will cleanup the output.
	  - Closes GParted bug #532574

2008-09-01  Curtis Gedak  <gedakc@gmail.com>

	* COPYING-DOCS: Added new file containing GFDL 1.2 license
	  - Closes GParted bug #550047

2008-08-06  Curtis Gedak  <gedakc@gmail.com>

	* src/GParted_Core.cc: Enhanced optimal block size copy algorithm.
	  - Changed algorithm to try all block size possibilities instead of
	    stopping as soon as next larger block size took longer to copy than
	    the prior block size.  Due to anomalies in benchmark times, the
	    previous algorithm would favour smaller block sizes.
	  - Closes GParted bug #546423

	* README: Updated with new directories for GParted Manual

2008-08-05  Curtis Gedak  <gedakc@gmail.com>

	* src/Win_GParted.h: Created show_help_dialog function to display help

	* src/Win_GParted.cc: Created show_help_dialog function to display help
	  - Replaced help dialog box with call to show_help_dialog function.
	    Initial concept for the show_help_dialog function comes from the
	    file-roller project.  The advantage to this code is that it does
	    not create a dependency on libgnomeui.
	  - Changed menu Help->Help CTRL+H to help->Contents F1

	* src/Makefile.am: Added GPARTED_DATADIR define to INCLUDES

	* autogen.sh: Added USE_COMMON_DOC_BUILD
	