@@ -1,4 +1,9 @@
-SUBDIRS = compose doc help include pixmaps po src
+### Do not execute make in the help subdirectory if DISABLE_DOC is set
+if DISABLE_DOC
+SUBDIRS = compose doc include pixmaps po src
+else
+SUBDIRS = help compose doc include pixmaps po src
+endif
 
 @INTLTOOL_DESKTOP_RULE@
 
