@@ -1,3 +1,10 @@
+2008-09-15  Curtis Gedak  <gedakc@gmail.com>
+
+	* configure.in,
+	  Makefile.am: Added --disable-doc flag to prevent building help docs
+
+	* README: Added note about --disable-doc flag
+
 2008-09-13  Curtis Gedak  <gedakc@gmail.com>
 
 	* configure.in: Append -svn to version for continuing development
